pipes and directives

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,9 @@
 <nav>
+
+
+  <button *appAcl="true">Admin panel</button>
+
+
   <button>{{ aboutMenuItem }}</button>
   <!-- <button>( {{  1 + 1 }} )</button> -->
   <button>Products</button>
