--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,8 +1,12 @@
+<!-- <pre>
+  {{product|json}}
+</pre> -->
+
 <mat-card class="example-card" (mouseenter)="hoverProduct()">
-  <mat-card-header>
+  <mat-card-header [ngClass]="{ 'isOdd': isOdd }">
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{product.title}}</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-subtitle>{{ date | date:'MMM d, y' }}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image [src]="product.photo" [alt]="product.title">
   <mat-card-content>
