Add lecture material

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,4 +13,5 @@
     <span>{{ getTotalPrice()}}</span>
     <!-- <span>{{ getTotalPrice() }}</span> -->
   </div>
+  <button (click)="onLogOut()">Log me out</button>
 </nav>
