--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -16,6 +16,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="likeProduct(product.id)">LIKE</button>
+    <button mat-button (click)="navigateToProduct(product.id)">VIEW</button>
     <button mat-button>BUY</button>
   </mat-card-actions>
 </mat-card>
