--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -15,8 +15,8 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="likeProduct(product.id)">LIKE</button>
-    <button mat-button (click)="navigateToProduct(product.id)">VIEW</button>
-    <button mat-button>BUY</button>
+    <button class="like-btn" mat-button (click)="likeProduct(product.id)">LIKE</button>
+    <button class="view-btn" mat-button (click)="navigateToProduct(product.id)">VIEW</button>
+    <button class="buy-btn" mat-button>BUY</button>
   </mat-card-actions>
 </mat-card>
